--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,43 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  background-color: aqua;
+  font-family: sans-serif;
+}
+
+img {
+  width: 100%;
+}
+
+.comics-box {
+  background-color: #1c1c1c;
+  padding: 30px 0;
+}
+.comics-box .comics-section {
+  width: 70%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+.comics-box .comics-section .comic-card {
+  width: calc(16.6666666667% - 20px);
+  margin: 10px;
+}
+.comics-box .comics-section .comic-card .comic-img {
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: top;
+     object-position: top;
+  overflow: hidden;
+  margin-bottom: 10px;
+}
+.comics-box .comics-section .comic-card h5 {
+  text-transform: uppercase;
+  color: white;
 }
