create component blue line and add some style

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,3 +1,4 @@
 @import "partials/general";
 @import "partials/comics-section";
-@import "partials/jumbotron"
+@import "partials/jumbotron";
+@import "partials/blue-line"
