--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12,6 +12,10 @@ img {
   width: 100%;
 }
 
+ul {
+  list-style: none;
+}
+
 .comics-box {
   background-color: #1c1c1c;
   padding: 30px 0;
@@ -47,4 +51,37 @@ img {
   padding: 200px 0;
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.blue-line {
+  background-color: #0282f9;
+  padding: 20px;
+}
+.blue-line section {
+  width: 80%;
+  margin: 0 auto;
+}
+.blue-line section ul {
+  display: flex;
+  justify-content: center;
+}
+.blue-line section ul li {
+  margin: 20px;
+  width: calc(20% - 40px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.blue-line section ul li img {
+  width: 50px;
+  height: 50px;
+  -o-object-fit: contain;
+     object-fit: contain;
+  margin-right: 5px;
+}
+.blue-line section ul li p {
+  text-transform: uppercase;
+  color: white;
+  font-size: 0.8rem;
+  font-weight: 500;
 }
