--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,4 +1,5 @@
 @import "partials/general";
 @import "partials/comics-section";
 @import "partials/jumbotron";
-@import "partials/blue-line"
+@import "partials/blue-line";
+@import "partials/header"
