--- a/public/css/app.css
+++ b/public/css/app.css
@@ -85,3 +85,87 @@ ul {
   font-size: 0.8rem;
   font-weight: 500;
 }
+
+header {
+  height: 120px;
+}
+header .header-top {
+  height: 20%;
+  background-color: #0282f9;
+}
+header .header-top div {
+  width: 70%;
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  text-transform: uppercase;
+  color: white;
+  font-size: 0.7rem;
+  font-weight: 600;
+}
+header .header-top div span {
+  margin-right: 50px;
+}
+header .header-top div select {
+  border: none;
+  background-color: #0282f9;
+  outline: none;
+  text-transform: inherit;
+  color: inherit;
+  font-size: inherit;
+  font-weight: inherit;
+}
+header .header-bottom {
+  height: 90%;
+}
+header .header-bottom .container {
+  width: 70%;
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+header .header-bottom .container .logo-img {
+  width: 5%;
+}
+header .header-bottom .container nav ul {
+  display: flex;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 0.9rem;
+  color: #464646;
+}
+header .header-bottom .container nav ul li {
+  margin: 0 15px;
+  line-height: 80px;
+  border-bottom: 5px solid transparent;
+}
+header .header-bottom .container nav ul li.active {
+  color: #0282f9;
+  border-bottom: 5px solid #0282f9;
+}
+header .header-bottom .container nav ul li:hover {
+  color: #0282f9;
+  border-bottom: 5px solid #0282f9;
+}
+header .header-bottom .container .search-box {
+  width: 10%;
+}
+header .header-bottom .container .search-box input {
+  padding-bottom: 5px;
+  outline: none;
+  border: none;
+  font-weight: 600;
+  font-size: 0.9rem;
+  text-align: right;
+  border-bottom: 2px solid #0282f9;
+}
+header .header-bottom .container .search-box input::-moz-placeholder {
+  color: #464646;
+}
+header .header-bottom .container .search-box input::placeholder {
+  color: #464646;
+}
