--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,4 +2,5 @@
 @import "partials/comics-section";
 @import "partials/jumbotron";
 @import "partials/blue-line";
-@import "partials/header"
+@import "partials/header";
+@import "partials/footer"
