--- a/public/css/app.css
+++ b/public/css/app.css
@@ -148,6 +148,10 @@ header .header-bottom .container nav ul li {
   line-height: 80px;
   border-bottom: 5px solid transparent;
 }
+header .header-bottom .container nav ul li a {
+  color: inherit;
+  text-decoration: none;
+}
 header .header-bottom .container nav ul li.active {
   color: #0282f9;
   border-bottom: 5px solid #0282f9;
