--- a/public/css/app.css
+++ b/public/css/app.css
@@ -50,6 +50,10 @@ ul {
   text-transform: uppercase;
   color: white;
 }
+.comics-box .comics-section .comic-card h5 a {
+  color: inherit;
+  text-decoration: none;
+}
 
 .jumbotron {
   background-image: url(../images/jumbotron.jpg);
@@ -239,4 +243,17 @@ footer .footer-bottom .container ul h2 {
 footer .footer-bottom .container ul li {
   width: 25px;
   margin: 5px;
+}
+
+.comic-section {
+  height: 80vh;
+}
+.comic-section .blue-line {
+  height: 8vh;
+}
+.comic-section .info-box {
+  background-color: #f0f0f0;
+  height: 40vh;
+  border-top: 2px solid #e2e2e2;
+  margin-top: 10px;
 }
