--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,4 +3,5 @@
 @import "partials/jumbotron";
 @import "partials/blue-line";
 @import "partials/header";
-@import "partials/footer"
+@import "partials/footer";
+@import "partials/single-comic-section"
