--- a/resources/sass/partials/_comics-section.scss
+++ b/resources/sass/partials/_comics-section.scss
@@ -21,6 +21,10 @@
             h5 {
                 text-transform: uppercase;
                 color: white;
+                a {
+                    color: inherit;
+                    text-decoration: none;
+                }
             }
         }
     }
