--- a/public/css/app.css
+++ b/public/css/app.css
@@ -250,6 +250,12 @@ footer .footer-bottom .container ul li {
 }
 .comic-section .blue-line {
   height: 8vh;
+  position: relative;
+}
+.comic-section .blue-line img {
+  width: 140px;
+  position: absolute;
+  bottom: 20px;
 }
 .comic-section .info-box {
   background-color: #f0f0f0;
