--- a/resources/sass/partials/_single-comic-section.scss
+++ b/resources/sass/partials/_single-comic-section.scss
@@ -2,6 +2,12 @@
     height: 80vh;
     .blue-line {
         height: 8vh;
+        position: relative;
+        img {
+            width: 140px;
+            position: absolute;
+            bottom: 20px;
+        }
     }
 
     .overview-box {
