--- a/resources/sass/partials/_single-comic-section.scss
+++ b/resources/sass/partials/_single-comic-section.scss
@@ -11,7 +11,74 @@
     }
 
     .overview-box {
-
+        padding: 50px 0;
+        .container {
+            display: flex;
+            justify-content: space-between;
+            .col-left {
+                width: 60%;
+                h2 {
+                    text-transform: uppercase;
+                    color: #00375f;
+                    margin-bottom: 20px;
+                }
+                .price-box {
+                    padding: 0 30px;
+                    height: 50px;
+                    background-color: #55ba59;
+                    margin-bottom: 20px;
+                    color: #b9fd9b;
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    border-bottom: 1px solid black;
+                    font-weight: 600;
+                    font-size: 1rem;
+                    div:first-child {
+                        display: flex;
+                        justify-content: space-between;
+                        width: 100%;
+                        padding-right: 30px;
+                        p {
+                            text-transform: uppercase;
+                        }
+                    }
+                    div:last-child {
+                        border-left: 1px solid black;
+                        height: 100%;
+                        padding-left: 30px;
+                        display: flex;
+                        align-items: center;
+                    }
+                    select {
+                        border: none;
+                        outline: none;
+                        background-color: inherit;
+                        color: white;
+                        font-size: 1rem;
+                        font-weight: 600;
+                    }
+                    span {
+                        color: white;
+                    }
+                }
+                p.description {
+                    line-height: 25px;
+                    font-size: .8rem;
+                    color: rgba(23, 23, 23, 0.811);
+                    font-weight: 600;
+                }
+            }
+            .col-right {
+                width: 30%;
+                h4 {
+                    text-align: right;
+                    text-transform: uppercase;
+                    color: rgba(40, 42, 53, 0.776);
+                    margin-bottom: 5px;
+                }
+            }
+        }
     }
 
     .info-box {
